--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "home.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/style.css",
-      "dest": "/style.css"
-    },
-    {
-      "src": "/script.js",
-      "dest": "/script.js"
-    },
-    {
-      "src": "/cabai.jpeg",
-      "dest": "/cabai.jpeg"
-    },
-    {
-      "src": "/foto cabai.jpg",
-      "dest": "/foto cabai.jpg"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/home.html"
+      "dest": "/$1"
     }
   ]
 }
