--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/",
+      "dest": "/home.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
