--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Website for selling chili seedlings",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
