--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "connect-pg-simple": "^9.0.1"
   }
 }
