--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.2",
     "pg": "^8.11.3",
-    "connect-pg-simple": "^9.0.1"
+    "connect-pg-simple": "^9.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
