🚀 Major Update: Elderly-Friendly Features & Batch Naming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plantera",
+  "name": "leafy",
   "version": "1.0.0",
   "description": "Website for selling chili seedlings",
   "main": "server.js",
