Fix static file serving on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/(.*\\.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot))$",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
