Fix root route: serve static home.html directly to prevent 500 error

--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
       "dest": "/$1"
     },
     {
+      "src": "/",
+      "dest": "/home.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
