--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "node": "22.x"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
-    "pg": "^8.11.3",
-    "connect-pg-simple": "^9.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3"
   }
 }
